--- a/src/components/layouts/css/lore.css
+++ b/src/components/layouts/css/lore.css
@@ -137,7 +137,7 @@
 .containerform {
 	background-color: #0000;
 	border-radius: 10px;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25),
 	0 10px 10px rgba(0,0,0,0.22);
 	position: relative;
 	overflow: hidden;
@@ -145,6 +145,7 @@
 	height: 30rem;
 	/* max-width: 100%;
 	min-height: 480px; */
+	margin: 0 40px;
 }
 
 .form-container {
@@ -280,8 +281,12 @@
 	margin-right: 10px;
 }
 #Trabajador{
-	padding-right: 10%;
+	padding-right: 10px;
 }
 #Cliente{
 	padding-left: 10%;
+}
+.radiusB{
+	width: 100%;
+	height: auto;
 }
