--- a/src/components/layouts/css/lore.css
+++ b/src/components/layouts/css/lore.css
@@ -279,9 +279,8 @@
 .rBtn label{
 	margin-right: 10px;
 }
-#Trabajador{
-	padding-right: 10%;
-}
-#Cliente{
-	padding-left: 10%;
+.radiusB{
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	color: whitesmoke;
 }
