--- a/src/components/layouts/css/lore.css
+++ b/src/components/layouts/css/lore.css
@@ -287,6 +287,9 @@
 	padding-left: 10%;
 }
 .radiusB{
-	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	width: 60%;
 	height: auto;
+	color: whitesmoke;
 }
