--- a/src/components/IU/css/style.css
+++ b/src/components/IU/css/style.css
@@ -60,20 +60,21 @@ header{
     justify-content: space-between;
     background: rgba(0,0,0,0.9);
     z-index: 1000;
+    transition: 0.4s;
 }
 .slider{
     background: url(../../img/srb.jpeg) no-repeat center center;
     background-size: cover;
     width: 100%;
-    height: 1000px;
+    height: 62.5em;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .imgSlider{
-    width: 10em;
-    height: 8em;
+    width: 10rem;
+    height: 8rem;
 }
 
 .imagenLogo{
@@ -331,10 +332,10 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
     .NavLink{
         position: fixed;
         width: 30%;
-        height: 50vh;
+        height: 27em;
         background: rgba(0,0,0,1);
-        right: 0;
-        /* right: -100%; */
+        /* right: 0; */
+        right: -100%;
         top: 0;
         text-align: center;
         padding: 100px 0px;
@@ -371,7 +372,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
         color:#ffd17b;
     }
     #check:checked ~ .NavLink{
-        right: -100%;
+        right: 0;
     }
     .submenus{
         width: 100%;
@@ -389,7 +390,13 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
     }
     .children{
         right: 0;
-        top: 25.5em;
+        top: 24em;
+    }
+    header{height:6em;}
+
+    .imgSlider{
+        height: 7rem;
+        width: 9rem;
     }
 }
 
