--- a/src/components/layouts/css/modal.css
+++ b/src/components/layouts/css/modal.css
@@ -220,9 +220,10 @@
   width: 100%;
   height: 100%;
 }
-
+/*Boton Volver*/
 .volver{
-  background: linear-gradient(#1b1b1b, #111);
+  /* background: linear-gradient(#1b1b1b, #111); */
+  background: linear-gradient(#2c2c2c, rgb(0, 0, 0));
   color: white;
   font-family: inherit;
   padding: 0.35em;
@@ -240,6 +241,7 @@
   padding-right: 3.3em;
   left: 15px;
   bottom: 15px;
+  box-shadow: 0 0 6px 1px white;
 }
 
 .volver .icon {
@@ -270,6 +272,20 @@
 .volver:active .icon {
   transform: scale(0.95);
  }
+
+/*Boton agendar*/
+.agendar{
+  height: 2.5em;
+  width: 6rem;
+  position: absolute;
+  right: 1rem;
+  bottom: 1rem;
+  text-align: center;
+  color: #fff;
+  background: linear-gradient(#2c2c2c, rgb(0, 0, 0));
+  border-radius: 10px;
+  box-shadow: 0 0 6px 1px white;
+}
 
 .contenedor_horarios{
   width: 45%;
@@ -303,9 +319,10 @@
   background-color: #050505;
 }
 
-.btn-confirmar{
-  background-color: red;
-}
+/* .btn-confirmar{
+  background-color: red !important;
+  border: none !important;
+} */
 
 .mdl_Citatitulo{
   width: 95%;
