--- a/src/components/layouts/css/modal.css
+++ b/src/components/layouts/css/modal.css
@@ -13,7 +13,7 @@
   }
   
   .contenedorModalPerfil{
-    width: 66em;
+    width: 70%;
     height: 38em;
     top: 7.2em;
     background: linear-gradient(#1b1b1b, #111);
@@ -102,7 +102,7 @@
   background: linear-gradient(#1b1b1b, #111);
   color: white;
   font-family: inherit;
-  padding: 0.35em;
+  /* padding: 0.35em; */
   padding-left: 1.2em;
   font-size: 17px;
   font-weight: 500;
@@ -115,8 +115,9 @@
   position: absolute;
   height: 2.8em;
   padding-right: 3.3em;
-  right: 15px;
-  bottom: 15px;
+  right: 1.3rem;
+  bottom: 1.3rem;
+  box-shadow: 0 0 6px 1px white;
   }
   .btn-cita .icon {
     background: white;
@@ -239,8 +240,8 @@
   position: absolute;
   height: 2.8em;
   padding-right: 3.3em;
-  left: 15px;
-  bottom: 15px;
+  left: 1.3rem;
+  bottom: 1.3rem;
   box-shadow: 0 0 6px 1px white;
 }
 
@@ -278,8 +279,8 @@
   height: 2.5em;
   width: 6rem;
   position: absolute;
-  right: 1rem;
-  bottom: 1rem;
+  right: 1.3rem;
+  bottom: 1.3rem;
   text-align: center;
   color: #fff;
   background: linear-gradient(#2c2c2c, rgb(0, 0, 0));
