--- a/src/components/layouts/css/lore.css
+++ b/src/components/layouts/css/lore.css
@@ -124,6 +124,7 @@
 	padding: 0 50px;
 	height: 100%;
 	text-align: center;
+	z-index: 50;
 }
 
 .inputform {
@@ -137,15 +138,15 @@
 .containerform {
 	background-color: #0000;
 	border-radius: 10px;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25),
+  	box-shadow: 0 14px 28px rgba(0,0,0,0.25),
 	0 10px 10px rgba(0,0,0,0.22);
 	position: relative;
-	overflow: hidden;
+	/* overflow: hidden; */
 	width: 48rem;
 	height: 30rem;
-	/* max-width: 100%;
-	min-height: 480px; */
 	margin: 0 40px;
+	animation-name: trasladarse;
+	animation-duration: 0.4s;
 }
 
 .form-container {
@@ -280,15 +281,11 @@
 .rBtn label{
 	margin-right: 10px;
 }
-#Trabajador{
+.labelRadio{
 	padding-right: 10px;
 }
-#Cliente{
-	padding-left: 10%;
-}
+
 .radiusB{
-	display: grid;
-	grid-template-columns: 1fr 1fr;
 	width: 60%;
 	height: auto;
 	color: whitesmoke;
@@ -419,5 +416,45 @@
 		margin: 0 5px;
 		height: 40px;
 		width: 40px;
+	}
+}
+
+/*nuevo formulario*/
+.nuevoForm{
+	height: 30em;
+	width: 20em;
+	position: absolute;
+	display: none;
+	transition: 0.4s;
+	padding-right: 40px;
+	padding-left: 5px;
+	right: 31rem;
+	transform: translateX(0);
+	animation-name: nuevoFormulario;
+	animation-duration: 4s;
+	z-index: 0;
+}
+
+/* #mostrar:checked ~ .nuevoForm{
+	top:0;
+	transform: translateX(100%);
+	display: block;
+} */
+
+#cliente:checked ~ .nuevoForm{
+	animation-direction: reverse;
+	border: 1px solid red;
+}
+
+@keyframes nuevoFormulario {
+	0% {
+		opacity: 0;
+		z-index: 0;
+		transform: translateX(0);
+	}
+	50%, 100% {
+		opacity: 1;
+		z-index: 0;
+		transform: translateX(100%);
 	}
 }
