modificando perfil de trabajdor

--- a/src/components/IU/css/btnEdit.css
+++ b/src/components/IU/css/btnEdit.css
@@ -1,28 +1,39 @@
 /* From uiverse.io by @adamgiebl */
 .cssbuttons-io-button {
+    background-color: #111;
+    color: #fff;
+    padding: 5px 8px 5px 5px;
+    border-radius: 10px;
+    border: 1px solid wheat;
+}
+
+.cssbuttons-io-button:hover{
+    background-color: #222;
+    box-shadow: 0 0 5px 2px wheat;
+}
+
+.cssbuttons-io-button:active{
+    background-color: #222;
+    box-shadow: 0 0 5px 2px wheat inset;
+}
+
+.bi-pencil-square{ height: 70%;}
+
+.filaEditar{
+    height: 3rem;
     display: flex;
     align-items: center;
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    padding: 0.7em 1.4em 0.7em 1.1em;
-    color: white;
-    background: #ad5389;
-    background: linear-gradient(0deg, rgba(20,167,62,1) 0%, rgba(102,247,113,1) 100%);
-    border: none;
-    box-shadow: 0 0.7em 1.5em -0.5em #14a73e98;
-    letter-spacing: 0.05em;
-    border-radius: 20em;
-   }
-   
-   .cssbuttons-io-button svg {
-    margin-right: 6px;
-   }
-   
-   .cssbuttons-io-button:hover {
-    box-shadow: 0 0.5em 1.5em -0.5em #14a73e98;
-   }
-   
-   .cssbuttons-io-button:active {
-    box-shadow: 0 0.3em 1em -0.5em #14a73e98;
-   }
+    margin-top: 10px;
+}
+
+.cssbuttons-io-button, .form-check, .categorias{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+
+.form-check, .form-switch{
+    font-size: x-large;
+}
