--- a/src/components/layouts/css/profile.css
+++ b/src/components/layouts/css/profile.css
@@ -1,20 +1,13 @@
-.containerNegro{
-    background: url(../../img/fondo/luna.jpg) no-repeat  center;
-}
+.containerNegro{ background: url(../../img/fondo/luna.jpg) no-repeat  center; }
 
-.main-body {
-    padding: 1em;
-}
-.cardsP{
-    margin-top: 7em;
-}
-.cardP {
+.main-body { padding: 1em; }
+
+.cardsP{  margin-top: 7em; }
+/* .cardP {
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
-}
+} */
 
-hr{
-    border: 1px solid #444;
-}
+hr{ border: 1px solid #444; }
 
 .cardP{
     position: relative;
@@ -43,60 +36,32 @@ hr{
     padding-right: 8px;
     padding-left: 8px;
 }
-.mb-3, .my-3 {
+/* .mb-3, .my-3 {
     margin-bottom: 1rem!important;
-}
+} */
 
-.card, .list-group-item{
-    background: linear-gradient(#1b1b1b, #111);
-}
+.card, .list-group-item{ background: linear-gradient(#1b1b1b, #111); }
 
 .list-group-item{
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
 }
 
-.bibi-whatsapp{
-    color: limegreen;
-}
+.bibi-whatsapp{ color: limegreen; }
 
-.timeline-sm-item, .mt-3, .form-check-label{
-    color: #fff;
-}
-.form-check{ height: 3rem; font-size: 1.4rem;}
+.timeline-sm-item, .mt-3, .form-check-label, .categorias{ color: #fff; }
+/* .form-check, .form-switch{ font-size: 1.6rem; display: flex; align-items: center;}
 
-.form-check-input{ height: 70%; }
+.form-check-input{ 
+    height: 2rem; 
+    width: 4rem !important;
+} */
 
-.bg-gray-300 {
-    background-color: #e2e8f0;
-}
-.h-100 {
-    height: 100%!important;
-}
-.shadow-none {
-    box-shadow: none!important;
-}
-.linkPerfil{
-    border-radius: 150px;
-    width:50px;
-    height:50px;
-}
-.imgP{
-    margin-top: 0px;
-    padding-bottom: 24px;
-}
-.progress{
-    height: 5px;
-}
-.progress-bar{
-    width: 66%;
-}
 .mb-0{
     color: #ffd17b;
     /* color: #17a2b8!important; */
     display: flex;
-    align-items: center;    
-    
+    align-items: center;
 }
 
 .alturaTamano{
@@ -105,12 +70,10 @@ hr{
     display: flex;
     align-items: start;
 }
-.btnM{
-    margin-left: 10px;
-}
-.iconsM{
-    margin-right: 8px;
-}
+.btnM{ margin-left: 10px; }
+
+.iconsM{ margin-right: 8px; }
+
 .cardP-box {
     background: linear-gradient(#1b1b1b, #111);
     background-clip: border-box;
@@ -149,64 +112,15 @@ hr{
     box-shadow: 0;
 }
 
-.infoCampo{
-    visibility: visible;
-}
+#infoInput1, #infoInput2, #infoInput3, #infoInput4, #infoInput5, #infoInput6, #infoInput7{ display: none; }
 
-#infoInput1, #infoInput2, #infoInput3, #infoInput4, #infoInput5, #infoInput6{
-    display: none;
-}
+.rounded-circle { border-radius: 50%!important; }
 
-.avatar-xl {
-    height: 6rem;
-    width: 6rem;
-}
-.rounded-circle {
-    border-radius: 50%!important;
-}
-.nav-pills .nav-link {
-    border-radius: .25rem;
-}
-.navtab-bg li>a {
-    background-color: #f7f7f7;
-    margin: 0 5px;
-}
-.mb-4, .my-4 {
-    margin-bottom: 2.25rem!important;
-}
-
-.progress-sm {
-    height: 5px;
-}
-.m-0 {
-    margin: 0!important;
-}
-.table .thead-light th {
-    color: #6c757d;
-    background-color: #f1f5f7;
-    border-color: #dee2e6;
-}
-.social-list-item {
-    height: 2rem;
-    width: 2rem;
-    line-height: calc(2rem - 4px);
-    display: block;
-    border: 2px solid #adb5bd;
-    border-radius: 50%;
-    color: #adb5bd;
-}
-
-.text-purple {
-    color: #6559cc!important;
-}
-.border-purple {
-    border-color: #6559cc!important;
-}
-
-.timeline {
+/* .timeline {
     margin-bottom: 50px;
     position: relative;
 }
+
 .timeline:before {
     background-color: #dee2e6;
     bottom: 0;
@@ -216,63 +130,10 @@ hr{
     top: 30px;
     width: 2px;
     z-index: 0;
-}
-.timeline .time-show {
-    margin-bottom: 30px;
-    margin-top: 30px;
-    position: relative;
-}
-.timeline .timeline-box {
-    background: #fff;
-    display: block;
-    margin: 15px 0;
-    position: relative;
-    padding: 20px;
-}
-.timeline .timeline-album {
-    margin-top: 12px;
-}
-.timeline .timeline-album a {
-    display: inline-block;
-    margin-right: 5px;
-}
-.timeline .timeline-album img {
-    height: 36px;
-    width: auto;
-    border-radius: 3px;
-}
+} */
+
 @media (min-width: 768px) {
-    .timeline .time-show {
-        margin-right: -69px;
-        text-align: right;
-    }
-    .timeline .timeline-box {
-        margin-left: 45px;
-    }
-    .timeline .timeline-icon {
-        background: #dee2e6;
-        border-radius: 50%;
-        display: block;
-        height: 20px;
-        left: -54px;
-        margin-top: -10px;
-        position: absolute;
-        text-align: center;
-        top: 50%;
-        width: 20px;
-    }
-    .timeline .timeline-icon i {
-        color: #98a6ad;
-        font-size: 13px;
-        position: absolute;
-        left: 4px;
-    }
-    .timeline .timeline-desk {
-        display: table-cell;
-        vertical-align: top;
-        width: 50%;
-    }
-    .timeline-item {
+    /* .timeline-item {
         display: table-row;
     }
     .timeline-item:before {
@@ -329,16 +190,16 @@ hr{
         margin-right: 45px;
         margin-left: 0;
         text-align: right;
-    }
+    } */
 }
 @media (max-width: 767.98px) {
-    .timeline .time-show {
+    /* .timeline .time-show {
         text-align: center;
         position: relative;
     }
     .timeline .timeline-icon {
         display: none;
-    }
+    } */
 }
 .timeline-sm {
     padding-left: 110px;
@@ -420,24 +281,18 @@ hr{
           rgba(224, 224, 224, 0.45) 0px 1px 0px 0px;
   }
   
-  .switch input[type="checkbox"]:checked + .sliderP::after {
-    left: 24px;
-  }
+  .switch input[type="checkbox"]:checked + .sliderP::after { left: 24px; }
   
-  .switch input[type="checkbox"] {
-    display: none;
+  .switch input[type="checkbox"] { display: none; }
+
+  .btnActivateM{
+    display: flex;
+    align-items: center;
   }
-.btnActivateM{
+
+  .btnActivateM label { display: flex; }
+
+  .row-2{
     display: flex;
     align-items: center;
-}
-.btnActivateM label {
-    display: flex;
-}
-.day-2{
-    display: flex;
-}
-.row-2{
-    display: flex;
-    align-items: center;
-}
+  }
