--- a/src/components/IU/css/btnEdit.css
+++ b/src/components/IU/css/btnEdit.css
@@ -8,9 +8,9 @@
     padding: 0.7em 1.4em 0.7em 1.1em;
     color: white;
     background: #ad5389;
-    background: linear-gradient(0deg, rgba(20,167,62,1) 0%, rgba(102,247,113,1) 100%);
+    background: linear-gradient(0deg, #ffd17b 0%, #ffd17b 100%);
     border: none;
-    box-shadow: 0 0.7em 1.5em -0.5em #14a73e98;
+    box-shadow: 0 0.7em 1.5em -0.5em #ffd17b;
     letter-spacing: 0.05em;
     border-radius: 20em;
    }
