--- a/src/components/layouts/css/citas.css
+++ b/src/components/layouts/css/citas.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,500;1,600&family=Vidaloka&display=swap');
+
 .mainCitaTrabajador{
     height: 100%;
     width: 100%;
@@ -7,13 +9,94 @@
     padding-top:10em;
 }
 
-.contCitaTrabajador{
+.ctrCitaTrabajador{
     height: 40em;
-    width: 60em;
+    width: 80%;
     background-color: #111;
-    border: 2px solid black;
+    margin-bottom: 3rem;
+    border-radius: 10px;
 }
 
-/* .citasIzq{
+.citasIzq{
+    width: 70%;
+    height: 100%;
+    background-color: #222;
+    padding: 20px 10px 20px 20px;
+    border-radius: 10px 0 0 10px;
+}
 
+.tituloIzq{
+    width: 100%;
+    text-align: center;
+    height: 10%;
+    font-weight: bolder;
+    font-size: 3rem;
+    color: #fff;
+    /* font-family: 'Playfair Display', serif; */
+    font-family: 'Vidaloka', serif;
+}
+
+.cardsCitas{
+    width: 100%;
+    height: 90%;
+    overflow:auto;
+}
+
+.cardCita{
+    width: 98%;
+    height: 35%;
+    background: linear-gradient(to right, #1115, black);
+    color: #fff;
+    border-radius: 20px;
+    border: 1px solid black;
+    display: flex;
+    padding: 5px 10px;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+/* .cardCita:active{
+    border: 2px solid red;
 } */
+
+.titulo{ font-size: 2rem; font-weight: bolder; }
+
+.txtCita{ font-size: 1.3rem; display: flex; }
+
+.cardCita div h4 b{ margin-right: 5px;}
+
+.infoCita{ width: 60%;}
+
+.btnsCita{
+    width: 40%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+}
+
+.btnsCita button{
+    width: 14rem;
+    height: 3rem;
+    border-radius: 10px;
+    background: linear-gradient(#333, #222);
+    font-size: 1.8rem;
+    font-weight: bolder;
+}
+
+#btnEditarCita, #btnRechazarCita, #btnAceptarCita{ display: flex; justify-content: center; align-items: center;}
+
+svg{ width: 32px; height: 32px; margin-right: 10px;}
+
+#btnAceptarCita{ border: 1px solid ;} 
+#btnEditarCita{ border: 1px solid; }
+#btnRechazarCita{ border: 1px solid; }
+
+#chulo{ color: #008f39;}
+#editar{ color: #0d6efd;}
+#equis{ color: #f44336;}
+
+/*#008f39;
+#0d6efd;
+#f44336;*/
