--- a/src/components/layouts/css/profile.css
+++ b/src/components/layouts/css/profile.css
@@ -64,7 +64,7 @@ hr{ border: 1px solid #444; }
     align-items: center;
 }
 
-.alturaTamano{
+.alturaTamaño{
     height: 2.7rem;
     font-size: 1.2rem;
     display: flex;
