--- a/src/components/IU/css/btnEdit.css
+++ b/src/components/IU/css/btnEdit.css
@@ -45,3 +45,27 @@
 .editar, .form-switch{
     font-size: x-large;
 }
+
+.derechaBoton{
+    display: flex;
+    right: 0;
+}
+
+.timeline-sm-item .verCita{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.timeline-sm-item .verCita button{
+    background-color: #050505;
+    border-radius: 10px;
+    height: 3rem;
+    width: 5rem;
+    border: 1px solid #0d6efd;
+    color: #fff;
+}
+
+.timeline-sm-item .verCita button:hover{
+    box-shadow: 0 0 10px 2px #0d6efd inset;
+}
