--- a/src/components/layouts/css/citas.css
+++ b/src/components/layouts/css/citas.css
@@ -1,32 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,500;1,600&family=Vidaloka&display=swap');
 
+/*main y contenedor*/
 .mainCitaTrabajador{
     height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top:10em;
+    padding-top: 10em;
+    background-color: #050505;
 }
 
 .ctrCitaTrabajador{
-    height: 40em;
+    height: 36em;
     width: 80%;
     margin-bottom: 3rem;
-    border-radius: 10px;
+    border-radius: 20px;
     display: flex;
+    box-shadow: 0 0 12px 0.1px #fff;
 }
 
 /*lado izquierdo*/
 .citasIzq{
     width: 70%;
     height: 100%;
-    background-color: #222;
+    background: linear-gradient(#131313, rgb(27, 27, 27));
     padding: 20px 10px 20px 20px;
-    border-radius: 10px 0 0 10px;
+    border-radius: 20px 0 0 20px;
     border-top: 1px solid rgb(15, 15, 15);
-    border-left: 1px solid rgb(22, 22, 22);
-    border-bottom: 1px solid rgb(22, 22, 22);
+    border-left: 1px solid rgb(15, 15, 15);
+    border-bottom: 1px solid rgb(19, 19, 19);
 }
 
 .tituloIzq{
@@ -37,6 +40,8 @@
     font-size: 3rem;
     color: #fff;
     font-family: 'Vidaloka', serif;
+    margin-bottom: 1.5rem;
+    background-color: #f8f8f80e;
 }
 
 .cardsCitas{
@@ -47,7 +52,7 @@
 
 .cardCita{
     width: 98%;
-    height: 35%;
+    height: 38%;
     background: linear-gradient(to right, black, #1115);
     color: #fff;
     border-radius: 20px;
@@ -98,17 +103,17 @@ svg{ width: 32px; height: 32px; margin-right: 10px;}
 
 #btnAceptarCita{ 
     border: 1px solid ;
-    background: linear-gradient(#008f39, #222);
+    background: linear-gradient(#018837, #222);
 }
 
 #btnEditarCita{ 
     border: 1px solid;
-    background: linear-gradient(#0d6efd, #222);
+    background: linear-gradient(#004bbd, #222);
 }
 
 #btnRechazarCita{ 
     border: 1px solid;
-    background: linear-gradient(#f44336, #222);
+    background: linear-gradient(#cf1f12, #222);
 }
 
 #chulo{ color: #008f39;}
@@ -123,13 +128,48 @@ svg{ width: 32px; height: 32px; margin-right: 10px;}
 .citasFiltro{
     width: 30%;
     height: 100%;
-    background-color: #111;
+    background: linear-gradient(#1b1b1b, #111);
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: space-evenly;
-    border-top: 1px solid rgb(14, 14, 14);
+    justify-content: space-around;
+    border-top: 1px solid rgb(19, 19, 19);
     border-right: 1px solid #050505;
     border-bottom: 1px solid #050505;
-    border-radius: 0 10px 10px 0;
+    border-radius: 0 20px 20px 0;
+    padding: 20px;
+}
+
+.citasFiltro ul{
+    width: 100%;
+    height: 15%;
+    /* border-bottom: 1px solid rgba(0, 0, 0, 0.425);
+    border-bottom: 1px solid #E8E8E8; */
+}
+
+.citasFiltro ul li{
+    width: 100%;
+    height: auto;
+    display: flex;
+    margin-top: 10px; 
+    font-size: 1.5rem;
+    color: #fff;
+    gap: 5px;
+    justify-content: space-between;
+}
+
+.select{
+    width: 8rem;
+	background: linear-gradient(#1b1b1b, #111);
+    border-bottom: 0;
+	border-radius: 5px;
+    border: 1px solid #111;
+}
+
+.citasFiltro hr{
+    width: 90%;
+    height: auto;
+    border: 1px solid #E8E8E8;
+    position: relative;
+    top: -1rem;
 }
