--- a/src/components/layouts/css/citas.css
+++ b/src/components/layouts/css/citas.css
@@ -36,7 +36,6 @@
     width: 100%;
     text-align: center;
     height: 10%;
-    font-weight: bolder;
     font-size: 3rem;
     color: #fff;
     /* font-family: 'Vidaloka', serif; */
@@ -89,11 +88,12 @@
 }
 
 .btnsCita button{
-    width: 14rem;
+    width: 11rem;
     height: 3rem;
     border-radius: 10px;
     font-size: 1.8rem;
     font-weight: bolder;
+    box-shadow: 0 0 5px -2px;
 }
 
 #btnEditarCita, #btnRechazarCita, #btnAceptarCita{ display: flex; justify-content: center; align-items: center;}
@@ -105,18 +105,25 @@ svg{ width: 32px; height: 32px; margin-right: 10px;}
 }
 
 #btnAceptarCita{ 
-    border: 1px solid ;
-    background: linear-gradient(#018837, #222);
+    color: #008f39;
 }
 
+#btnAceptarCita:hover{ 
+    background-color: #0a0a0a;
+}
+
+#btnEditarCita:hover{ 
+    background-color: #0a0a0a;
+}
 #btnEditarCita{ 
-    border: 1px solid;
-    background: linear-gradient(#004bbd, #222);
+    color: #0d6efd;
 }
 
+#btnRechazarCita:hover{ 
+    background-color: #0a0a0a;
+}
 #btnRechazarCita{ 
-    border: 1px solid;
-    background: linear-gradient(#cf1f12, #222);
+    color: #f44336;
 }
 
 #chulo{ color: #008f39;}
@@ -125,7 +132,8 @@ svg{ width: 32px; height: 32px; margin-right: 10px;}
 
 /*#008f39;
 #0d6efd;
-#f44336; o #C00*/
+#f44336; o #C00
+#ffd17b*/
 
 /*Lado Derecho*/
 .citasFiltro{
