--- a/src/components/layouts/css/profile.css
+++ b/src/components/layouts/css/profile.css
@@ -321,3 +321,7 @@ hr{ border: 1px solid #444; }
   .modal-body {
     justify-content: center;
   }
+  .subirImagen{
+    overflow:hidden;
+  }
+  .subirImagen:hover .rounded-circle{-webkit-transform:scale(1.3);transform:scale(1.3);}
